--- a/src/pages/NewsDetailPage/NewsDetailPage.module.scss
+++ b/src/pages/NewsDetailPage/NewsDetailPage.module.scss
@@ -16,10 +16,11 @@
   h2 {
     margin-top: 6rem;
     margin-bottom: 3rem;
+    display: flex;
+    align-items: baseline;
   }
 
   small {
-    display: contents;
     text-transform: lowercase;
     color: $primary-gray;
   }
